continue styling (white box divs)

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -1,5 +1,5 @@
 $black: #262626;
-$light-gray: #444444;
-$dark-gray: #999999;
+$light-gray: #FAFAFA;
+$dark-gray: #444444;
 $blue: #3897F0;
 $navy: #003569;
