--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -9,6 +9,7 @@ html, body, div, h1, a, nav, footer, img, button {
   font-family: inherit;
   vertical-align: inherit;
   text-decoration: inherit;
+  background-color: $light-gray
 }
 
 html {
