--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -1,3 +1,5 @@
+
+
 .auth-form {
   .button {
     border-radius: 4px;
@@ -23,18 +25,40 @@
   }
 
   .login-input {
+    background-color: #FFFFFF;
+    font-size: 14px;
+    width: 240px;
     border: 1px solid #dbdbdb;
     border-radius: 3px;
-    padding: 9px 8px 7px;
     margin: 3px 0;
-    font-size: 14px;
     position: relative;
-    width: 240px
+    padding: 9px 8px 7px;
   }
 
   .form-header {
     font-family: 'Cookie', cursive;
-    font-size: 38px;
+    font-size: 40px;
   }
+
+  .form-link {
+    padding: 26px;
+  }
+
+  .form-box {
+    background-color: #FFFFFF;
+    border: 1px solid #efefef;
+    padding: 20px 40px 40px 40px;
+    margin-bottom: 15px;
+    width: 300px;
+  }
+
+  .form-header {
+    background-color: #FFFFFF;
+  }
+
+  .login-form {
+    background-color: #FFFFFF;
+  }
+
 
 }
