--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -1,4 +1,10 @@
-
+.box {
+  background-color: #FFFFFF;
+  border: 1px solid #efefef;
+  padding: 20px 40px 40px 40px;
+  margin-bottom: 15px;
+  width: 300px;
+}
 
 .auth-form {
   .button {
@@ -44,14 +50,6 @@
     padding: 26px;
   }
 
-  .form-box {
-    background-color: #FFFFFF;
-    border: 1px solid #efefef;
-    padding: 20px 40px 40px 40px;
-    margin-bottom: 15px;
-    width: 300px;
-  }
-
   .form-header {
     background-color: #FFFFFF;
   }
@@ -59,6 +57,5 @@
   .login-form {
     background-color: #FFFFFF;
   }
-
 
 }
