--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -1,9 +1,10 @@
 .box {
   background-color: #FFFFFF;
   border: 1px solid #efefef;
-  padding: 20px 40px 40px 40px;
+  padding: 40px 40px 40px 40px;
   margin-bottom: 15px;
   width: 300px;
+  text-align: center;
 }
 
 .auth-form {
