Update Styling. Fix photo and user controllers. Add guest login

--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -1,3 +1,9 @@
+.auth-section {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .box {
   background-color: #FFFFFF;
   border: 1px solid #efefef;
