--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link href="https://fonts.googleapis.com/css?family=Cookie|Alegreya+Sans+SC:300,400,500,700|Alegreya+Sans:300,400,500,700" rel="stylesheet">
   </head>
 
   <body>
