Begin styling photo form.

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -10,6 +10,7 @@ html, body, div, h1, a, nav, footer, img, button {
   vertical-align: inherit;
   text-decoration: inherit;
   background-color: $light-gray;
+  color: $black;
 }
 
 html {
