--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -1,5 +1,6 @@
 $black: #262626;
 $light-gray: #FAFAFA;
-$dark-gray: #444444;
+$med-gray: #e1e1e1;
+$dark-gray: #969696;
 $blue: #3897F0;
 $navy: #003569;
