--- a/app/assets/stylesheets/photo_form.scss
+++ b/app/assets/stylesheets/photo_form.scss
@@ -8,6 +8,7 @@
 .dropzone {
   background-color: $med-gray;
   color: $dark-gray;
+  padding: 50px;
 }
 
 .upload-submit {
@@ -23,14 +24,15 @@
 }
 
 .upload-submit:active {
+  background-color: #87c0f6;
   border-radius: 4px;
   font-size: 16px;
-  color: $med-gray;
-  background-color: #87c0f6;
+  color: $light-gray;
   border: none;
   padding: 10px;
-  width: 250px;
+  width: 258px;
   margin: 3px 0;
+  margin-top: 12px;
 }
 
 .upload-inputs {
