Continue styling nav. Create feed api util. Begin feed actions.

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,8 +1,7 @@
 .nav-section {
   background: #FFFFFF;
   display: flex;
-  justify-content: center;
-  align-self: flex-start;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #dbdbdb;
 }
@@ -14,8 +13,9 @@
 .nav-instagramme {
   font-family: 'Cookie', cursive;
   font-size: 30px;
+  background: #FFFFFF;
 }
 
 .nav-icons {
-
+  background: #FFFFFF;
 }
