Add upload icon and link to nav. Begin follows back-end.

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -26,6 +26,8 @@
   padding: 0 8px;
 }
 
+
+
 .nav-instagramme {
   font-family: 'Cookie', cursive;
   font-size: 30px;
@@ -36,5 +38,8 @@
 
 .nav-icons {
   background: #FFFFFF;
-  
+}
+
+.nav-profile-link {
+  padding-left: 30px
 }
