Update photo form to return to profile after upload.

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -4,6 +4,8 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #dbdbdb;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .nav-logo {
@@ -25,8 +27,6 @@
   border-right: 1px solid #999;
   padding: 0 8px;
 }
-
-
 
 .nav-instagramme {
   font-family: 'Cookie', cursive;
