--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,8 +1,49 @@
 .profile-photo {
-  display: block;
-  max-width:230px;
-  max-height:230px;
   width: auto;
   height: auto;
+  max-width:230px;
+  max-height:230px;
+  display: block;
   border-radius: 50%;
+}
+
+.post-grid {
+  margin-top: 50px;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+// .post-grid a {
+//   margin: 0 30px 30px 0;
+//
+// }
+
+.post-list-item {
+  list-style-type: none;
+  overflow:hidden;
+  position: relative;
+  height: 290px;
+  width: 290px;
+}
+
+.post-grid :nth-of-type(3n+1) {padding-right:2%;}
+.post-grid :nth-of-type(3n+2) {padding:0 1%;}
+.post-grid :nth-of-type(3n+3) {padding-left:2%;}
+
+.post-list-item  img {
+  height: 290px;
+  width: 290px;
+  object-fit: cover;
+}
+
+.post-list-item li {
+  width: 290px;
+  height: 290px;
+}
+
+.profile-photos {
+  display: flex;
+  align-items: right;
+  justify-content: center;
 }
