--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -1,9 +1,12 @@
 .feed-photos {
-  max-width: 600px;
   justify-content: center;
   display: flex;
   align-items: center;
   flex-direction: column;
   margin: 0 auto;
   list-style-type: none;
+}
+
+.feed-photo {
+  max-width: 600px;
 }
