Continue styling profile feed. Add spacers between posts.

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -88,3 +88,11 @@
 .feed-likes {
   background-color: #FFFFFF;
 }
+
+.feed-spacer {
+  width: 600px;
+  padding-bottom: 90px;
+  background-color: $light-gray;
+  border-left: none;
+  border-right: none;
+}
