Add like button icon to photo feed. Continue profile reducer.

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -16,6 +16,18 @@
   background-color: #FFFFFF;
 }
 
+.unliked-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.liked-icon {
+  width: 30px;
+  height: 30px;
+  margin-top: 5px;
+  margin-left: 2px;
+}
+
 .feed-photo-header {
   height: 60px;
   width: 100%;
@@ -76,6 +88,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #FFFFFF;
+}
+
+.feed-photo-footer-sub {
   background-color: #FFFFFF;
 }
 
