Style comment input field.

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -99,6 +99,9 @@
   margin-left: 10px;
   padding-top: 7px;
   width: 500px;
+  border: 1px solid #FFFFFF;
+  border-radius: 3px;
+  font-size: 16px;
 }
 
 .feed-likes {
