Add seeds. Fix like button styling.

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -16,6 +16,10 @@
   background-color: #FFFFFF;
 }
 
+.feed-caption {
+  background-color: #FFFFFF;
+}
+
 .unliked-icon {
   width: 30px;
   height: 30px;
@@ -24,8 +28,6 @@
 .liked-icon {
   width: 30px;
   height: 30px;
-  margin-top: 5px;
-  margin-left: 2px;
 }
 
 .feed-photo-header {
