Begin styling login page.

--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -4,6 +4,11 @@
   flex-direction: column;
 }
 
+.form-description {
+  background-color: #FFFFFF;
+  font-family: 'Roboto', sans-serif;
+}
+
 .box {
   background-color: #FFFFFF;
   border: 1px solid #efefef;
