--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -4,6 +4,21 @@
   flex-direction: column;
 }
 
+.auth-img {
+  max-width: 300px;
+  display: flex;
+  flex-direction: row;
+  margin-right: 80px;
+}
+
+.entire-auth {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
 .form-description {
   background-color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
