--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -11,7 +11,11 @@
   margin-right: 80px;
 }
 
-.entire-auth {
+.about {
+  margin-left: 30px;
+}
+
+.auth-main {
   display: flex;
   align-items: center;
   justify-content: center;
