Add seeds. Reverse profile photo index order.

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -50,6 +50,10 @@
   background-color: #FFFFFF
 }
 
+.username-and-location {
+  background-color: #FFFFFF;
+}
+
 .feed-location {
   background-color: #FFFFFF
 }
