Style auth (vertically center elements).

--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  margin-top: 44px;
+  margin-top: 8%;
 }
 
 .form-description {
