Add links to user profiles in feed comments.

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -12,6 +12,10 @@
   background-color: #FFFFFF;
 }
 
+.feed-comment-username {
+  background-color: #FFFFFF;
+}
+
 .feed-photo {
   background-color: #FFFFFF;
 }
