--- a/app/assets/stylesheets/auth_form.scss
+++ b/app/assets/stylesheets/auth_form.scss
@@ -85,8 +85,9 @@
     background-color: #87c0f6;
     border: none;
     padding: 10px;
-    width: 250px;
+    width: 258px;
     margin: 3px 0;
+    margin-top: 12px;
   }
 
   .login-input {
