--- a/app/assets/stylesheets/photo_form.scss
+++ b/app/assets/stylesheets/photo_form.scss
@@ -2,10 +2,13 @@
   // display: inline;
   align-items: center;
   flex-direction: column;
+  margin: 0 auto;
+  max-width: 900px;
 }
 
 .upload-section {
   background-color: $med-gray;
+  margin-top: 15px;
 }
 
 .upload-form {
