Update nav bar (now static when scrolling).

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -6,6 +6,9 @@
   border-bottom: 1px solid $blue;
   padding-top: 8px;
   padding-bottom: 8px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .nav-logo {
