--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -8,6 +8,7 @@
   list-style-type: none;
   border: 1px solid #efefef;
   margin: 0 auto;
+  margin-top: 40px;
   margin-bottom: 60px;
   background-color: #FFFFFF;
 }
